# notebooklm_automation

./: .env.example  .gitignore  BLOG-HANDOFF.md  DOCUMENTAZIONE.md  FORMATO-ARTICOLI.md  LICENSE  README.md  approfondisci.py  article_instructions.txt  blog.config.json  config.py  conftest.py  daily_research.py  kanri-audio-2026-06-16.txt  kanri_article.py  kanri_brief.py  kanri_cleanup.py  kanri_engine.py  kanri_feeds.txt  kanri_podcast.py  notion_sync.py  notion_watcher.py  podcast_instructions.txt  prompt.txt  pyproject.toml  regen_article.py  report_instructions.txt  requirements.txt  trigger_server.py
.github/workflows/: ci.yml  daily-research.yml  keepalive.yml
tests/: test_core.py
vps/: notebooklm-cleanup.service  notebooklm-cleanup.timer  notebooklm-keepalive.service  notebooklm-keepalive.timer  notebooklm-podcast.service  notebooklm-podcast.timer  notebooklm-research.service  notebooklm-research.timer  notebooklm-trigger.service  notebooklm-watcher.service  notebooklm-watcher.timer  notebooklm.env.example  setup.sh
