[project]
name = "kanri-automation"
version = "1.0.0"
description = "Automazione editoriale: brief RSS, generazione articoli, podcast e pulizia, con Notion come CMS."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alessandro Mazzola" }]
dependencies = [
    "feedparser>=6.0",
    "edge-tts>=6.1",
    "internetarchive>=3.5",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # lunghezza riga gestita dal formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
